# Defense-Target-Visibility

./: .gitignore  Readme.md  adb.qgz  ciesum_vierer.html  compute.py  compute_viewshed_py.py  docker-compose.yml  generate_viewshed.py  view.html  viewshed.tif.aux.xml  viewshed_compare.html  viewshed_with_los.py
data/: adb.qgz  view.html  view2.html  viewshed_los.geojson  viewshed_obsA.geojson  viewshed_obsB.geojson  viewshed_py.geojson
data/viewsheds/: metadata.json  viewshed_obsA_h10.geojson  viewshed_obsA_h10.tif  viewshed_obsA_h100.geojson  viewshed_obsA_h100.tif  viewshed_obsA_h5.geojson  viewshed_obsA_h5.tif  viewshed_obsA_h50.geojson  viewshed_obsA_h50.tif  viewshed_obsB_h10.tif  viewshed_obsB_h100.geojson  viewshed_obsB_h100.tif  viewshed_obsB_h5.geojson  viewshed_obsB_h5.tif  viewshed_obsB_h50.tif
defense_los/: app.py  app2.py  compute_los.py  compute_viewshed.py  main.py  pyproject.toml
defense_los/data/: los_result.json  viewshed_py.geojson
defense_los/templates/: cesium_map.html
queries/: queries.md
test_scripts/: 3d_plot.py  compute_viewshed_py.py  viewshed_with_los.py
viewers/: los_viewer.html
