[project]
name = "defense-los"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "folium>=0.20.0",
    "numpy>=2.3.4",
    "pymongo>=4.15.3",
    "rasterio>=1.4.3",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
    "uvicorn>=0.38.0",
]
